CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(Threads)

PKG_CHECK_MODULES(JANSSON REQUIRED jansson)
PKG_CHECK_MODULES(CURL REQUIRED libcurl)
PKG_CHECK_MODULES(EVENT REQUIRED libevent libevent_pthreads)
PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)

ADD_DEFINITIONS("-Wall -Werror -std=c11 -D_GNU_SOURCE")

ADD_SUBDIRECTORY(libdc)
ADD_SUBDIRECTORY(ncdc)
