CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PKG_CHECK_MODULES(NCURSES REQUIRED ncursesw)
PKG_CHECK_MODULES(PANEL REQUIRED panel)
PKG_CHECK_MODULES(EDIT REQUIRED libedit)

SET(TARGET "ncdc")

SET(SOURCES
  "include/ncdc/input.h"
  "include/ncdc/mainwindow.h"
  "include/ncdc/ncdc.h"
  "src/emacs.c"
  "src/input.c"
  "src/mainwindow.c"
  "src/ncdc.c"
  "src/util.c"
  )

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${DC_INCLUDE_DIRS}
  ${JANSSON_INCLUDE_DIRS}
  ${CURL_INCLUDE_DIRS}
  ${EVENT_INCLUDE_DIRS}
  ${GLIB2_INCLUDE_DIRS}
  ${NCURSES_INCLUDE_DIRS}
  ${PANEL_INCLUDE_DIRS}
  ${EDIT_INCLUDE_DIRS}
  )

ADD_EXECUTABLE(${TARGET} ${SOURCES})
TARGET_LINK_LIBRARIES(${TARGET}
  ${DC_LIBRARIES}
  ${GLIB2_LIBRARIES}
  ${NCURSES_LIBRARIES}
  ${PANEL_LIBRARIES}
  ${EDIT_LIBRARIES}
  )
